--- a/proportal/src/css/sass/partials/_generic-carts.scss
+++ b/proportal/src/css/sass/partials/_generic-carts.scss
@@ -1,21 +1,37 @@
+@import "_forms.scss";
+
+// fieldset for cart lists and table lists
+.--top, .--base {
+	&__fieldset {
+		margin: $gutter 0;
+		float: right;
+	}
+
+	&__selectall, &__reset {
+		@extend .pp-button.blue-outline;
+	}
+}
+
+
+
 
 // Push generic-cart to all four data list types.
-@mixin generic-carts {
-	@include generic-cart( "taxon-cart" );
-	@include generic-cart( "gene-cart" );
-	@include generic-cart( "function-cart" );
-	@include generic-cart( "scaffold-cart" );
-}
-
+// @mixin generic-carts {
+// 	@include generic-cart( "taxon-cart" );
+// 	@include generic-cart( "gene-cart" );
+// 	@include generic-cart( "function-cart" );
+// 	@include generic-cart( "scaffold-cart" );
+// }
+// 
 // Defining styles for all generic-carts.
-@mixin generic-cart( $class ) {
-	.#{$class} {
-
-		&--top, &--base{
-			&__fieldset	{
-				margin: $gutter 0;
-				float: right;
-			}
-		}	
-	}	
-}
+// @mixin generic-cart( $class ) {
+// 	.#{$class} {
+// 
+// 		&--top, &--base{
+// 			&__fieldset	{
+// 				margin: $gutter 0;
+// 				float: right;
+// 			}
+// 		}	
+// 	}	
+// }
