--- a/proportal/views/inc/generic/title.tt
+++ b/proportal/views/inc/generic/title.tt
@@ -1,5 +1,5 @@
-<div id="pageHeader">
-	<div id="pageTitle" >
+<section class="title-section">
+	<!-- div id="pageTitle" -->
 [%	IF surtitle %]
 		<h3 class="[% class %]__surtitle">[% surtitle %]</h3>
 [%	END; %]
@@ -7,7 +7,7 @@
 [%	IF subtitle %]
 		<h3 class="[% class %]__subtitle">[% subtitle %]</h3>
 [%	END; %]
-	</div>
+	<!-- /div -->
 [%	# button bar
 
 	IF button;
@@ -48,5 +48,5 @@
 [%		END; # end button.cart %]
 	</ul>
 [%	END; # end button %]
-</div>
+</section>
 
