--- a/proportal/src/css/sass/partials/_forms.scss
+++ b/proportal/src/css/sass/partials/_forms.scss
@@ -150,7 +150,7 @@ button:disabled {
 
 	&__container {
 		line-height: $button-height;
-		height: $button-height;
+		// height: $button-height;
 	}
 	
 	&__label {
