--- a/proportal/src/css/sass/proportal.scss
+++ b/proportal/src/css/sass/proportal.scss
@@ -27,6 +27,7 @@
 @import "partials/nav_sidebar";
 @import "partials/nav_breadcrumbs"; // breadcrumbs!
 @import "partials/links";
+@import "partials/nav_inpage";
 @import "partials/extras";	// extra bits and pieces
 @import "partials/graph";
 @import "partials/phyloviewer";
