--- a/proportal/views/inc/title/function.tt
+++ b/proportal/views/inc/title/function.tt
@@ -1,7 +1,8 @@
 [%
 	surtitle = self.db;
-	article_title = self.name;
-
+	IF ! article_title;
+		article_title = self.name;
+	END;
 	button = {
 		cart => {
 			form => {
