--- a/proportal/views/inc/function/cycog.tt
+++ b/proportal/views/inc/function/cycog.tt
@@ -3,7 +3,8 @@
 	PROCESS 'inc/generic/link.tt';
 	# gene_cycog_groups.cycog_oid = cycog.cycog_oid
 
-	function_link( x = { db => 'cycog', xref => fn.cycog_oid, text => fn.cycog_oid } );
-	': ' _ fn.name _ ', ' _ fn.description;
+
+	function_link( x = { db => 'cycog', xref => fn.id, text => 'CyCOG:' _ fn.id } );
+	': ' _ fn.description;
 
 %]
