--- a/proportal/views/inc/generic/attr_value_table.tt
+++ b/proportal/views/inc/generic/attr_value_table.tt
@@ -12,27 +12,42 @@
 #PROCESS 'inc/generic/cbox.tt';
 #PROCESS 'inc/generic/link.tt';
 
-# table cell view
+# table row view
 # if the item is a scalar, prints it out
 # if the item is a hash, gets the 'macro' hash key, runs it, and prints the result
-# VIEW t_cell;
-#
-# 	BLOCK text;
-# 		item;
-# 	END;
-#
-# 	BLOCK hash;
-# 		mac = item.macro;
-# 		x = item;
-# 		TRY;
-# 			$mac( x );
-# 		CATCH;
-# 			USE Dumper( Indent => 1 );
-# 			'<pre>link error: ' _ Dumper.dump( item ) _ '</pre>';
-# 			error;
-# 		END;
-# 	END;
-# END;
+VIEW t_cell;
+
+	BLOCK text; %]
+	<td class="[% data_table.class %]__tcell--attr">
+[%		item.split('_').join(' ') | ucfirst; %]
+	</td>
+	<td class="[% data_table.class %]__tcell--val">
+[%		DATA_THING.$item %]
+	</td>
+[%	END;
+
+	BLOCK list; %]
+	<td class="[% data_table.class %]__tcell--attr">
+[%		item.first %]
+	</td>
+	<td class="[% data_table.class %]__tcell--val">
+[%		item.last %]
+	</td>
+[%	END;
+
+	BLOCK hash;
+		mac = item.macro;
+		x = item;
+		TRY;
+			$mac( x );
+		CATCH;
+			USE Dumper( Indent => 1 );
+			'<pre>link error: ' _ Dumper.dump( item ) _ '</pre>';
+			error;
+		END;
+	END;
+END; # end view t_cell
+
 
 MACRO attr_value_table BLOCK;
 
@@ -44,49 +59,40 @@ IF data_table.tbody.size > 0;
 [%	END %]
 	<thead class="[% data_table.class %]__thead">
 	<tr>
-[%		IF data_table.thead.enum;
-			FOREACH th IN headers.enum; %]
+[%	IF data_table.thead.enum;
+		FOREACH th IN headers.enum; %]
 		<th class='[% data_table.class %]__th--[% th %]'>[%
-				IF headers.enum_map.$th;
-					headers.enum_map.$th;
-				ELSIF 'cbox' != th;
-					th | ucfirst;
-				END; %]</th>
+			IF headers.enum_map.$th;
+				headers.enum_map.$th;
+			ELSIF 'cbox' != th;
+				th | ucfirst;
+			END; %]
+		</th>
 [%			END;
-		ELSE; %]
+	ELSE; %]
 		<th class="[% data_table.class %]__th--attr">Attribute</th>
 		<th class="[% data_table.class %]__th--value">Value</th>
-[%		END; %]
+[%	END; %]
 	</tr>
 	</thead>
 	<tbody class="[% data_table.class %]__tbody">
-[%		IF data_table.tbody == 'wrapper';
-
-			content;
-
-		ELSE;
-
-		FOREACH datum IN data_table.tbody; %]
+[%
+	FOREACH datum IN data_table.tbody; %]
 		<tr[%
-			IF datum.__id;
-			' id="' _ datum.__id _ '"';
-			END;
-			IF datum.__class;
-			' class="' _ datum.__class _ '"';
-			END; %]>
+		IF datum.__id;
+		' id="' _ datum.__id _ '"';
+		END;
+		IF datum.__class;
+		' class="' _ datum.__class _ '"';
+		END; %]>
 			<td class="[% data_table.class %]__tcell--attr">
-[%				IF ! datum.first;
-					datum.last.split('_').join(' ') | ucfirst;
-				ELSE;
-					datum.first;
-				END; %]
+[%			datum.first; %]
 			</td>
 			<td class="[% data_table.class %]__tcell--val">
-[%				datum.last %]
+[%			datum.last %]
 			</td>
 		</tr>
-[%		END; # FOREACH datum in data_table.tbody
-	END; %]
+[%	END; # FOREACH datum in data_table.tbody %]
 	</tbody>
 	</table>
 [%
