--- a/proportal/views/layouts/default_wide.tt
+++ b/proportal/views/layouts/default_wide.tt
@@ -26,7 +26,7 @@
 	PROCESS 'inc/header.tt';
 	PROCESS 'inc/nav_container.tt';
 %]
-	<article class="content cf full" role="main">
+	<article class="content cf full" role="main" id="top">
 [%
 #	IF settings.message;
 		PROCESS 'inc/message.tt';
