--- a/proportal/views/inc/page_head.tt
+++ b/proportal/views/inc/page_head.tt
@@ -1,4 +1,5 @@
 	<link rel="stylesheet" type="text/css" href="/css/proportal.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
 
 	<meta charset="UTF-8">
 	<!-- link href="//www.google-analytics.com" rel="dns-prefetch" -->
